@startuml




'==Variabler og methods===

class User{
- username : String
- password : String
- savedMedia : list<Media>
- watchedMovie : list<Media>

+ void addWatchedMedia(Media Media)
+ void addSavedMedia(Media Media)
+ void removeSavedMedia(Media Media)
+ ArrayList<Media> getWatchedMedia()
+ ArrayList<Media> getSavedMedia()

}

class Media{
# String title
# ArrayList<Enum category> categories
# int releaseYear
# double rating
# Enum category
# String season


+ String toString()
+ void play()


}

class Main


enum Category
class StreamingService{
# ArrayList<User> users
# ArrayList<Media> movieList
# ArrayList<Media> seriesList
- Menu menu


- void loadUsers()
- void loadMediaItems()
+ void addUser()
+ void startStreamingService()
+ void showMenu()
}
class FileHandler <<utility>> {
- parseCategories(String categoryString)
- void readData(String filePath)

+ void saveFiles(File csvfile)
+ static void saveUsers(ArrayList<User> users)
+ void loadUsers(String filePath)
+ void loadMediaItems(String filePath)
+ handleUserWatchedMedia(String[] splittedSavedList)
+ handleUserSavedMedia(String[] splittedSavedList)




}


class UserInput <<utility>>{
+String promptUserString(String message)
+int promptUserInt(String message)
+boolean askUserYesNo(String message)
+double promptDouble(String message)

}
class Menu{
+User currentUser

+ void start()
- void selectMedia(ArrayList<Media> listToPrint)+ ArrayList<Media> searchMedia(String input)
+ ArrayList<Media> searchMedia(String input)
+ ArrayList<Media> sortByCategory(ArrayList<Category> categories) + ArrayList<Media> searchMedia(String input)
+ ArrayList<Category> printCatagories()
+ ArrayList<Media> sortByRatingLowestToHighest()
+ ArrayList<Media> sortByRatingHighestToLowest()
+ ArrayList<Media> atLeastThisRating(double rating)
- void showMenu()
- void createUser()
- void login()


}


'==ARV===

User *-- FileHandler
StreamingService *-- FileHandler

Menu *-- Media

Main --> StreamingService

StreamingService *--- UserInput
StreamingService *-- Media
StreamingService *-- Menu
StreamingService *-- User

Media *-- Category



@enduml